--- a/projects.html
+++ b/projects.html
@@ -135,9 +135,10 @@
 						<h3>Learn. Collaborate. Contribute</h3>
 						<p>Take a minute and go through our project list, contribute to any of these projects. If you have a doubt please feel free to contact us from below communication channels. </p>
 
-							<span>	<b>Mailing list:</b> <a href="https://groups.google.com/forum/#!forum/codelanka">codelanka@googlegroups.com </a></span>
-</br>
-<span><b>Gitter Channel:</b> <a href="https://gitter.im/codelanka">https://gitter.im/codelanka</a></span>
+							<span><div align="center"><b>Mailing list:</b><a href="https://groups.google.com/forum/#!forum/codelanka">codelanka@googlegroups.com </a></div></span>
+
+<span>
+<div align="center"><b>Gitter Channel:</b> <a href="https://gitter.im/codelanka">https://gitter.im/codelanka</a></div></span>
 					</div>
 				</div>
 			</div>
